Update address, correct name, adjust spacing and sidebar, remove LC & SBLC

--- a/styles/components.css
+++ b/styles/components.css
@@ -626,6 +626,12 @@ textarea.form-control {
     width: 60px;
 }
 
+@media (max-width: 768px) {
+    .sticky-sidebar {
+        top: 65%;
+    }
+}
+
 /* Modal Styling */
 .modal {
     display: none;
